manifests/vault-live-secrets-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-secrets-web-demo
  labels:
    app: vault-secrets-web-demo
