manifests/vault-live-secrets-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-live-secrets-demo
  namespace: vault-live-secrets-demo
  labels:
    app: vault-live-secrets-demo
spec:
  selector:
    app: vault-live-secrets-demo
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
