manifests/vault-live-secrets-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault-secrets-web-demo
  namespace: vault-secrets-web-demo
  labels:
    app: vault-secrets-web-demo
spec:
  to:
    kind: Service
    name: vault-secrets-web-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
